[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Obstacle.gd" type="Script" id=1]
[ext_resource path="res://objects/Explosion.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.1675, 10 )

[node name="Obstacle" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Rect" type="ColorRect" parent="."]
margin_left = -31.0
margin_top = -10.0
margin_right = 32.0
margin_bottom = 10.0
color = Color( 0.28125, 0.154289, 0.0922852, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Explosion" parent="." instance=ExtResource( 2 )]

[node name="SmallExplosion" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.2, 0.2 )

[node name="HPGone" type="ColorRect" parent="."]
visible = false
margin_left = -31.0
margin_top = -45.0
margin_right = 32.0
margin_bottom = -38.0
color = Color( 0.804688, 0.0722961, 0.0722961, 1 )

[node name="HPLeft" type="ColorRect" parent="."]
visible = false
margin_left = -31.0
margin_top = -45.0
margin_right = 32.0
margin_bottom = -38.0
color = Color( 0.153608, 0.691406, 0.108032, 1 )

[node name="Tween" type="Tween" parent="HPLeft"]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
